<resources>
    <string name="point_list">Bodovna Lista</string>
    <string name="rating_list">Rejting Lista</string>
    <string name="favorite_couples">Omiljeni Parovi</string>
    <string name="clubs">Klubovi</string>
    <string name="adjudicators">Sudije</string>
    <string name="list">Liste</string>
    <string name="competitions">Takmičenja</string>
    <string name="news">Vesti</string>
    <string name="read_more">Pročitaj više</string>
    <string name="read_less">Pročitaj manje</string>
    <string name="club_logo">Logo kluba</string>
    <string name="contact">Kontakt</string>
    <string name="club_address">%1$s, %2$s</string>
    <string name="call">Pozovi</string>
    <string name="send_message">Pošalji poruku</string>
    <string name="send_email">Pošalji email</string>
    <string name="not_available">N/A</string>
    <string name="pps_app">Plesni Savez Srbije App</string>
    <string name="need_call_permission">Morate odobriti permisije za pozivanje u koliko hocete da kontaktirate klub iz aplikacije</string>
    <string name="ok">OK</string>
    <string name="latin_and_standard">Latino i Standard</string>
    <string name="modern">Savremeni</string>
    <string name="contact_image_content_description">Kontakt ikonica</string>
    <string name="list_image_content_description">Slika liste</string>
    <string name="club">Klub</string>
    <string name="couple">Par</string>
    <string name="points">Bodovi</string>
    <string name="place">Mesto</string>
    <string name="latin">Latino</string>
    <string name="standard">Standard</string>
    <string name="combined">10 Plesova</string>
    <string name="la">LA</string>
    <string name="st">ST</string>
    <string name="km">KM</string>
    <string name="dance">Ples</string>
    <string name="grade">Razred</string>
    <string name="category">Kategorija</string>
    <string name="club_image_content_description">Logo kluba</string>
    <string name="couple_image_content_description">Slika plesnog para</string>
    <string name="male_image_content_description">Ikonica partnera</string>
    <string name="female_image_content_description">Ikonica partnerke</string>
    <string name="wdsf_license">WDSF medjunardona licenca</string>
    <string name="wdsf_licensed_chairman">WDSF medjunardona licenca za Glavnog sudiju</string>
    <string name="licensed_chairman">Licenca za Glacnog sudiju</string>
    <string name="wdsf_examiner">WDSF Examiner</string>
    <string name="dance_category_license">%1$s licenca</string>
    <string name="pdf_content_description">PDF fajl za raspis i rezultate</string>
    <string name="school_and_first_league">Školska i prva liga</string>
    <string name="super_league">Super liga</string>
    <string name="search_title">Pretraži</string>
    <string name="filter_title">Filter</string>
    <string name="search_hint">Pretraži</string>
    <string name="senior">Stariji Senior</string>
    <string name="adult">Senior</string>
    <string name="youth">Stariji Omladinci</string>
    <string name="juvinale">Omladinci</string>
    <string name="junior_ii">Mladji Omladinci</string>
    <string name="junior_i">Pioniri</string>
    <string name="i_class">I razred</string>
    <string name="a_class">A razred</string>
    <string name="b_class">B razred</string>
    <string name="c_class">C razred</string>
    <string name="d_class">D razred</string>
    <string name="splash_activity_icon_content_description">Logo Plesnog Saveza Srbije</string>
</resources>
