<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:minEms="12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:text="@string/senior" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/seniorSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitch"
                    app:useMaterialThemeColors="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:minEms="12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:text="@string/adult" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/adultSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:minEms="12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:text="@string/youth" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/youthSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitch"
                    app:useMaterialThemeColors="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:minEms="12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:text="@string/juvinale" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/juniorIISwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:minEms="12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:text="@string/junior_ii" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/juniorISwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:minEms="12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:text="@string/junior_i" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/juvenileSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:minEms="12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:text="@string/i_class" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/iSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:minEms="12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:text="@string/a_class" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/aSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:minEms="12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:text="@string/b_class" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/bSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:minEms="12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:text="@string/c_class" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/cSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:minEms="12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:text="@string/d_class" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/dSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitch" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>